# agv

./: README.md  UI.html  map-navigation.js  model.css
agv_data/: map_data.db
agv_interface/: index.html
agv_interface/css/: model.css  style.css
agv_interface/js/: auto-map-sizing.js  canvas-controls.js  canvas-integration.js  main.js  toast-notifications.js
agv_ws/src/agv_launch/: package.xml  setup.py
agv_ws/src/agv_launch/launch/: agv.launch.py  aruco_localization.launch.py  detect_aruco.launch.py  web_communication.launch.py
agv_ws/src/localization/: package.xml  setup.py
agv_ws/src/localization/launch/: aruco_localization.launch.py
agv_ws/src/localization/localization/: aruco_localization.py
agv_ws/src/map_database/: package.xml  setup.cfg  setup.py
agv_ws/src/map_database/launch/: map_handler.launch.py
agv_ws/src/map_database/map_database/: map_handler.py  map_loader.py  map_saver.py
agv_ws/src/map_database_interfaces/: CMakeLists.txt  package.xml
agv_ws/src/map_database_interfaces/srv/: GetMap.srv  GetMapName.srv  LoadMap.srv  SaveMap.srv
agv_ws/src/vision/: package.xml  setup.py
agv_ws/src/vision/config/: params.yaml
agv_ws/src/vision/launch/: detect_aruco.launch.py
agv_ws/src/vision/vision/: aruco_detector.py  image_publisher.py  image_subscriber.py
