<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="faaiqmastyaga@gmail.com">faaiq</maintainer>
  <license>TODO: License declaration</license>

  <depend>rosbridge_server</depend>
  <depend>web_video_server</depend>
  <depend>vision</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
